--- a/OldClient/package.json
+++ b/OldClient/package.json
@@ -17,20 +17,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
-    "native-base": "3.4.0",
+    "firebase": "^9.10.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1",
+    "react-native-screens": "~3.10.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
+    "react-router-dom": "^6.4.1",
     "socket.io-client": "^4.5.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
