--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.11.0",
+    "firebase": "9.9.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
