--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
     "react-router-dom": "^6.4.1",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "uuid": "^9.0.0"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
