--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "client-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "socket.io-client": "^4.5.3",
     "uuid": "^9.0.0",
